feat: update ES6 note

--- a/ECMAScript/ES6/index.html
+++ b/ECMAScript/ES6/index.html
@@ -39,7 +39,7 @@
           </li>
 
           <li>
-            <p>3.变量的结构赋值；</p>
+            <p>3.变量的解构赋值；</p>
             <ul>
               <li><a href="lesson_3_var_destructuring_assignment.html" target="_blank">lesson_3_var_destructuring_assignment.html</a></li>
             </ul>
@@ -67,16 +67,16 @@
           </li>
 
           <li>
-            <p>7.数组的扩展；</p>
+            <p>7.函数的扩展；</p>
             <ul>
-              <li><a href="lesson_7_array_extension.html" target="_blank">lesson_7_array_extension.html</a></li>
+              <li><a href="lesson_7_function_extension.html" target="_blank">lesson_7_function_extension.html</a></li>
             </ul>
           </li>
 
           <li>
-            <p>8.函数的扩展；</p>
+            <p>8.数组的扩展；</p>
             <ul>
-              <li><a href="lesson_8_function_extension.html" target="_blank">lesson_8_function_extension.html</a></li>
+              <li><a href="lesson_8_array_extension.html" target="_blank">lesson_8_array_extension.html</a></li>
             </ul>
           </li>
 
