--- a/ECMAScript/ES6/lesson_8_array_extension.html
+++ b/ECMAScript/ES6/lesson_8_array_extension.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1"/>
       <meta charset="utf-8">
       <title>
-          ECMAScript6 理解 第七章 数组的扩展
+          ECMAScript6 理解 第八章 数组的扩展
       </title>
       <style type="text/css">
         h3{ text-align: center; }
