--- a/react/begin_learn.html
+++ b/react/begin_learn.html
@@ -42,6 +42,18 @@
               </ul>
             </li>
 
+            <li>
+              <h3>3.React 生命周期；</h3>
+              <ul>
+                <li>
+                  <a href="https://www.jianshu.com/p/514fe21b9914" target="_blank">详解React生命周期</a>
+                </li>
+                <li>
+                  <a href="https://segmentfault.com/a/1190000016617400" target="_blank">React新的生命周期</a>
+                </li>
+              </ul>
+            </li>
+
           </ul>
       </div>
     </body>
