feat: update ES6 notes

--- a/ECMAScript/ES6/index.html
+++ b/ECMAScript/ES6/index.html
@@ -88,6 +88,13 @@
           </li>
 
           <li>
+            <p>9.1.对象的新增方法；</p>
+            <ul>
+              <li><a href="lesson_9_1_object_methods.html" target="_blank">lesson_9_1_object_methods.html</a></li>
+            </ul>
+          </li>
+
+          <li>
             <p>10.Symbol数据类型（防止命名冲突）</p>
             <ul>
               <li><a href="lesson_10_Symbol.html" target="_blank">lesson_10_Symbol.html</a></li>
