--- a/ECMAScript/ES6/lesson_10_Symbol.html
+++ b/ECMAScript/ES6/lesson_10_Symbol.html
@@ -17,6 +17,7 @@
 
       <h4>1.概述</h4>
       <div>对象属性名都是字符串，这容易造成属性名的冲突。Symbol 保证每个属性的名字都是独一无二，这样就从根本上防止属性名的冲突。</div>
+      <div>ES6 引入了一种新的原始数据类型Symbol，表示独一无二的值。它是 JavaScript 语言的第七种数据类型，前六种是：undefined、null、布尔值（Boolean）、字符串（String）、数值（Number）、对象（Object）。</div>
 
       <h4>2.作为属性名的 Symbol</h4>
       <div>由于每一个 Symbol 值都是不相等的，这意味着 Symbol 值可以作为标识符，用于对象的属性名，就能保证不会出现同名的属性。这对于一个对象由多个模块构成的情况非常有用，能防止某一个键被不小心改写或覆盖。</div>
