--- a/ECMAScript/ES6/lesson_9_object_extension.html
+++ b/ECMAScript/ES6/lesson_9_object_extension.html
@@ -26,16 +26,10 @@
       <h4>3.方法的 name 属性</h4>
       <div>函数的name属性，返回函数名。对象方法也是函数，因此也有name属性。</div>
 
-      <h4>4.Object.is()</h4>
-      <div>ES6提出“Same-value equality”（同值相等）算法，用来解决这个问题。Object.is就是部署这个算法的新方法。它用来比较两个值是否严格相等，与严格比较运算符（===）的行为基本一致。</div>
-
-      <h4>5.Object.assign()</h4>
-      <div>Object.assign方法用于对象的合并，将源对象（source）的所有可枚举属性，复制到目标对象（target）。</div>
-
-      <h4>6.属性的可枚举性</h4>
+      <h4>4.属性的可枚举性和遍历</h4>
+      <div>可枚举性：</div>
       <div>对象的每个属性都有一个描述对象（Descriptor），用来控制该属性的行为。Object.getOwnPropertyDescriptor方法可以获取该属性的描述对象。</div>
-
-      <h4>7.属性的遍历</h4>
+      <div>属性的遍历：</div>
       <div>ES6一共有5种方法可以遍历对象的属性。</div>
       <div>for...in循环遍历对象自身的和继承的可枚举属性（不含Symbol属性）。</div>
       <div>Object.keys返回一个数组，包括对象自身的（不含继承的）所有可枚举属性（不含Symbol属性）。</div>
@@ -43,94 +37,32 @@
       <div>Object.getOwnPropertySymbols返回一个数组，包含对象自身的所有Symbol属性。</div>
       <div>Reflect.ownKeys返回一个数组，包含对象自身的所有属性，不管属性名是Symbol或字符串，也不管是否可枚举。</div>
 
-      <h4>8.__proto__属性，Object.setPrototypeOf()，Object.getPrototypeOf()</h4>
-      <div>__proto__属性（前后各两个下划线），用来读取或设置当前对象的prototype对象。目前，所有浏览器（包括 IE11）都部署了这个属性。</div>
+      <h4>5.super 关键字</h4>
+      <div>我们知道，this关键字总是指向函数所在的当前对象，ES6 又新增了另一个类似的关键字super，指向当前对象的原型对象。</div>
 
-      <h4>9.Object.keys()，Object.values()，Object.entries()</h4>
-      <div>ES5 引入了Object.keys方法，返回一个数组，成员是参数对象自身的（不含继承的）所有可遍历（enumerable）属性的键名。</div>
-      <div>ES2017 引入了跟Object.keys配套的Object.values和Object.entries，作为遍历一个对象的补充手段，供for...of循环使用。</div>
-
-      <h4>10.对象的扩展运算符</h4>
+      <h4>6.对象的扩展运算符</h4>
       <div>《数组的扩展》一章中，已经介绍过扩展运算符（...）。</div>
-
-      <h4>11.Object.getOwnPropertyDescriptors()</h4>
-      <div>ES5有一个Object.getOwnPropertyDescriptor方法，返回某个对象属性的描述对象（descriptor）。</div>
-      <div>ES2017 引入了Object.getOwnPropertyDescriptors方法，返回指定对象所有自身属性（非继承属性）的描述对象。</div>
-
-      <h4>12.Null 传导运算符</h4>
-      <div>编程实务中，如果读取对象内部的某个属性，往往需要判断一下该对象是否存在。比如，要读取message.body.user.firstName，安全的写法非常麻烦。</div>
-      <div>ES6引入了“Null 传导运算符”（null propagation operator）?.，简化上面的写法。</div>
+      <div>解构赋值：</div>
+      <div>对象的解构赋值用于从一个对象取值，相当于将目标对象自身的所有可遍历的（enumerable）、但尚未被读取的属性，分配到指定的对象上面。所有的键和它们的值，都会拷贝到新对象上面。</div>
+      <div>扩展运算符：</div>
+      <div>对象的扩展运算符（...）用于取出参数对象的所有可遍历属性，拷贝到当前对象之中。</div>
 
       <script src="../../lib/babel.min.js"></script>
       <script type="text/babel">
-
-        var foo = 'bar';
-        var baz = {foo};
+        const foo = 'bar';
+        const baz = {foo};
+        console.log("baz: ", baz); // {foo: "bar"}
         // 等同于
-        // var baz = {foo: foo};
+        const baz2 = {foo: foo};
+        
+        let { x, y, ...z } = { x: 1, y: 2, a: 3, b: 4 };
+        console.log("x:", x); // 1
+        console.log("y:", y); // 2
+        console.log("z:", z); // { a: 3, b: 4 }
 
-        let propKey = 'foo';
-        let obj = {
-            [propKey]: true,
-            ['a' + 'bc']: 123
-        };
-
-        const person = {
-            sayName() {
-                console.log('hello!');
-            },
-        };
-        person.sayName.name;   // "sayName"
-
-        Object.is(+0, -0); // false
-        Object.is(NaN, NaN); // true
-
-        var target = { a: 1 };
-        var source1 = { b: 2 };
-        var source2 = { c: 3 };
-        Object.assign(target, source1, source2);
-        target; // {a:1, b:2, c:3}
-
-        let objSix = { foo: 123 };
-        Object.getOwnPropertyDescriptor(objSix, 'foo');
-        //  {
-        //    value: 123,
-        //    writable: true,
-        //    enumerable: true,
-        //    configurable: true
-        //  }
-
-        Reflect.ownKeys({ [Symbol()]:0, b:0, 10:0, 2:0, a:0 });
-        // ['2', '10', 'b', 'a', Symbol()]
-
-        var objNine = { foo: 'bar', baz: 42 };
-        Object.keys(objNine);
-        // ["foo", "baz"]
-
-        const [a, ...b] = [1, 2, 3];
-        a // 1
-        b // [2, 3]
-
-        const objEleven = {
-          foo: 123,
-          get bar() { return 'abc' }
-        };
-        Object.getOwnPropertyDescriptors(objEleven)
-        // { foo:
-        //    { value: 123,
-        //      writable: true,
-        //      enumerable: true,
-        //      configurable: true },
-        //   bar:
-        //    { get: [Function: bar],
-        //      set: undefined,
-        //      enumerable: true,
-        //      configurable: true } }
-
-        // const firstName = message?.body?.user?.firstName || 'default';
-        // 如果 a 是 null 或 undefined，下面的语句不产生任何效果
-        // 否则执行 a.b = 42
-        // a?.b = 42;
+        let z1 = { a: 3, b: 4 };
+        let n = { ...z };
+        console.log("n:", n); // { a: 3, b: 4 }
       </script>
     </body>
 </html>
