feat: update mybooks

--- a/ECMAScript/ES6/index.html
+++ b/ECMAScript/ES6/index.html
@@ -200,7 +200,7 @@
           </li>
 
           <li>
-            <p>25.ES6规格（标准文档）</p>
+            <p>25.读懂 ECMAScript 规格</p>
             <ul>
               <li><a href="lesson_25_ES6_standard.html" target="_blank">lesson_25_ES6_standard.html</a></li>
             </ul>
