feat: add typescript demo

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
               <li><a href="socket.io/index.html" target="_blank">socket.io测试demo</a></li>
               <li><a href="sass/index.html" target="_blank">sass学习Demo</a></li>
               <li><a href="ECMAScript/ES6/index.html" target="_blank">ES6学习笔记</a></li>
+              <li><a href="TypeScript/index.html" target="_blank">TypeScript学习笔记</a></li>
             </ul>
           </li>
 
