--- a/react/begin_learn.html
+++ b/react/begin_learn.html
@@ -9,7 +9,7 @@
       </title>
       <link rel="icon" href="../favicon.ico" type="image/x-icon" />
       <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-      <link rel="stylesheet" href="index.css">
+      <link rel="stylesheet" href="../markdown.css">
       <style>
             a:hover{
                 text-decoration: none;
