feat: update learn log

--- a/TypeScript/index.html
+++ b/TypeScript/index.html
@@ -31,9 +31,7 @@
               >
             </li>
             <li>
-              <a
-                href="./typeScript_lesson.html"
-                target="_blank"
+              <a href="./typeScript_lesson.html" target="_blank"
                 >git book - TypeScript入门教程</a
               >
             </li>
