--- a/react/index.html
+++ b/react/index.html
@@ -42,6 +42,13 @@
             <li>
               <a href="redux_learn.html" target="_blank">redux_learn.html</a>
             </li>
+            <li>
+              <div><a href="https://reactjs.org/docs/hooks-intro.html" target="_blank">React Hooks - official</a></div>
+              <div><a href="https://juejin.im/post/5cf475d66fb9a07ea944594e#heading-15" target="_blank">深入浅出 React Hooks</a></div>
+            </li>
+            <li>
+              <div><a href="http://www.ayqy.net/blog/dive-into-react-fiber/" target="_blank">完全理解React Fiber</a></div>
+            </li>
           </ul>
         </li>
       </ul>
