feat: update echarts map info

--- a/echarts/world_map.html
+++ b/echarts/world_map.html
@@ -40,7 +40,8 @@
           {min:10000, max:99999, color:'#FB6511'},
           {min:100000, max:199999, color:'#C64000'},
           {min:200000, color:'#71220A'},
-        ]
+        ],
+        show:false
       },
       series: [{
         "type": 'map',
