feat: add typescrip notes

--- a/DOM_demo.html
+++ b/DOM_demo.html
@@ -33,7 +33,7 @@
     console.log('h2_o_t_2_scrollTop:' + h2Top2.scrollTop + '\n');
     console.log('h2_o_t_2_clientTop:' + h2Top2.clientTop + '\n');
     console.log('h2_o_t_2_offsetTop:' + h2Top2.offsetTop + '\n');
-    // 后去浏览器滚动条高度
+    // 获取浏览器滚动条高度
     window.addEventListener("scroll", function (e) {
       var h = document.documentElement.scrollTop || document.body.scrollTop;
       console.log(h)
