--- a/TypeScript/index.html
+++ b/TypeScript/index.html
@@ -35,6 +35,11 @@
                 >git book - TypeScript入门教程</a
               >
             </li>
+            <li>
+              <a href="./typeScript_lesson2.html" target="_blank"
+                >《深入理解TypeScript》</a
+              >
+            </li>
           </ul>
         </li>
       </ul>
